--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "backend": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "body-parser": "^1.19.1",
     "core-js": "^3.6.5",
     "express": "^4.17.2",
     "json-server": "^0.17.0",
