--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "serve-static": "^1.14.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "webpack-simple": "^1.7.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
