--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vue/cli": "^4.5.15",
     "body-parser": "^1.19.1",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "json-server": "^0.17.0",
     "serve-static": "^1.14.2",
